Backend routes renamed, set frontend routing, and merged frontend+backend
