# backend/src/server.js
@@ -8,6 +8,7 @@ const morgan = require('morgan');
 const mongoose = require('mongoose');
 const swaggerUi = require('swagger-ui-express');
 const YAML = require('yamljs');
+const { join } = require('path');
 
 const logger = require('./config/logger');
 
@@ -41,19 +42,24 @@ app.use(express.json());
 
 app.use(cors());
 
-// Endpoints
-app.post('/login', authHandler.login);
-// app.use('/login', express.static('public'));
-app.use('/products', authenticateJwt, require('./routes/product.routes'));
-app.use('/customers', authenticateJwt, require('./routes/customer.routes'));
-app.use('/admins', authenticateJwt, require('./routes/admin.routes'));
-app.use('/bills', authenticateJwt, require('./routes/bill.routes'));
-app.use('/orders', authenticateJwt, require('./routes/order.routes'));
-app.use('/deliveries', authenticateJwt, require('./routes/delivery.routes'));
+// Backend routes
+app.post('/api/login', authHandler.login);
+app.use('/api/products', authenticateJwt, require('./routes/product.routes'));
+app.use('/api/customers', authenticateJwt, require('./routes/customer.routes'));
+app.use('/api/admins', authenticateJwt, require('./routes/admin.routes'));
+app.use('/api/bills', authenticateJwt, require('./routes/bill.routes'));
+app.use('/api/orders', authenticateJwt, require('./routes/order.routes'));
+app.use('/api/deliveries', authenticateJwt, require('./routes/delivery.routes'));
 
-app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
+app.use('/api/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
-// app.use(express.static('public'));
+// Use public folder for frontend
+app.use(express.static('public'));
+
+// Frontend routing to force
+app.get('*', (_req, res) => {
+  res.sendFile(join(__dirname, '../public/index.html'));
+});
 
 // Error handling middleware
 app.use((err, req, res, next) => {
